# polymarket-follower

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
cli/: polybot.py  search.py
deploy/: README.md  polymarket-follower.service
docker/: Dockerfile  docker-compose.yml
src/: .env.example  follower.pid  follower.py  helpers.py  last_processed_ts.txt  pyproject.toml  requirements.txt
src/config/: follower_config.json
src/discord/: discord_bot.py
src/follower/: follower.py  helpers.py
src/follower/utils/: logger.py  utils.py
src/polymarket/: follower.py  helpers.py
src/polymarket_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: address_to_follow.txt  cron_redeem.sh  logger.py  monitor.py  monitor_report.py  portfolio.py  ratio_calculator.py  redeem_all.py  target_stats.py  utils.py
