[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"

dependencies = [
    "matplotlib",
    "tabulate",
    "requests",
]

[project.scripts]
discord-bot = "discord.discord_bot:main"
polymarket-follower = "polymarket.follower:main"
ratio-calculator = "utils.ratio_calculator:main"
target-stats = "utils.target_stats:main"

[tool.setuptools.packages.find]
include = ["utils", "discord", "polymarket"]
